--- a/_config.yml
+++ b/_config.yml
@@ -18,18 +18,16 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Notes
+email: aphiloc@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  my personal programming notes with examples and explanations
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://lp723.github.io # the base hostname & protocol for your site, e.g. http://example.com
 domain: lp723.github.io
 baseurl: notes
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: myn6meisjohnny
+github_username:  lp723
 
 # Build settings
 theme: minima
